--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.navbar-brand h1 {
+    font-size: 20px;
+    font-weight: 700;
+    margin: 0;
+}
 .alert-danger {
     background-color: #f8d7da;
     color: #721c24;
